docs/api/qiskit/0.33/qiskit.circuit.library.PauliEvolutionGate.mdx
---
title: PauliEvolutionGate (v0.33)
description: API reference for qiskit.circuit.library.PauliEvolutionGate in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PauliEvolutionGate
---

# PauliEvolutionGate

<Class id="qiskit.circuit.library.PauliEvolutionGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/pauli_evolution.py" signature="PauliEvolutionGate(operator, time=1.0, label=None, synthesis=None)" modifiers="class">
  Bases: `qiskit.circuit.gate.Gate`

  Time-evolution of an operator consisting of Paulis.

  For an operator $H$ consisting of Pauli terms and (real) evolution time $t$ this gate implements

$$
U(t) = e^{-itH}.
$$

  This gate serves as a high-level definition of the evolution and can be synthesized into a circuit using different algorithms.

  The evolution gates are related to the Pauli rotation gates by a factor of 2. For example the time evolution of the Pauli $X$ operator is connected to the Pauli $X$ rotation $R_X$ by

$$
U(t) = e^{-itX} = R_X(2t).
$$

  **References:**

  \[1] G. Li et al. Paulihedral: A Generalized Block-Wise Compiler Optimization Framework For Quantum Simulation Kernels (2021). \[[arXiv:2109.03371](https://arxiv.org/abs/2109.03371)]

  **Parameters**

  *   **operator** (*Pauli | PauliOp | SparsePauliOp | PauliSumOp | list*) – The operator to evolve. Can also be provided as list of non-commuting operators where the elements are sums of commuting operators. For example: `[XY + YX, ZZ + ZI + IZ, YY]`.
  *   **time** (`Union`\[`int`, `float`, `ParameterExpression`]) – The evolution time.
  *   **label** (`Optional`\[`str`]) – A label for the gate to display in visualizations.
  *   **synthesis** (`Optional`\[`EvolutionSynthesis`]) – A synthesis strategy. If None, the default synthesis is the Lie-Trotter product formula with a single repetition.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-paulievolutiongate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.PauliEvolutionGate.inverse" signature="PauliEvolutionGate.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-circuit-library-paulievolutiongate-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.library.PauliEvolutionGate.validate_parameter" signature="PauliEvolutionGate.validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression

    **Return type**

    `Union`\[`float`, `ParameterExpression`]
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.params">
    return instruction params.
  </Attribute>

  ### time

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.time">
    Return the evolution time as stored in the gate parameters.

    **Return type**

    `Union`\[`float`, `ParameterExpression`]

    **Returns**

    The evolution time.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

